--- a/Asisya.ProductsApi/.github/workflows/ci.yml
+++ b/Asisya.ProductsApi/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
           ${{ runner.os }}-nuget-
 
     - name: 🔄 Restore dependencies
-      run: dotnet restore
+      run: dotnet restore Asisya.ProductsApi.sln
 
     - name: 🏗️ Build solution
       run: dotnet build --configuration Release --no-restore
