--- a/Asisya.ProductsApi/.github/workflows/ci.yml
+++ b/Asisya.ProductsApi/.github/workflows/ci.yml
@@ -1,5 +1,4 @@
-# Pipeline simple de CI para Asisya Products API
-
+# .github/workflows/ci.yml
 name: ✅ CI Build & Test
 
 on:
@@ -46,15 +45,19 @@ jobs:
           ${{ runner.os }}-nuget-
 
     - name: 🔄 Restore dependencies
-      # Se añade la ruta de la solución para que el comando funcione correctamente.
       run: dotnet restore Asisya.ProductsApi/Asisya.ProductsApi.sln
 
     - name: 🏗️ Build solution
-      # Se añade la ruta de la solución.
       run: dotnet build Asisya.ProductsApi/Asisya.ProductsApi.sln --configuration Release --no-restore
 
+    - name: ⏳ Wait for Postgres
+      run: |
+        until pg_isready -h localhost -p 5432 -U postgres; do
+          echo "Esperando a que Postgres esté listo..."
+          sleep 5
+        done
+
     - name: 🧪 Run unit tests
-      # Se actualiza la ruta del proyecto de pruebas.
       run: |
         dotnet test Asisya.ProductsApi/tests/Application.Tests \
           --configuration Release \
@@ -64,7 +67,6 @@ jobs:
           --results-directory ./test-results
 
     - name: 🧪 Run integration tests
-      # Se actualiza la ruta del proyecto de pruebas.
       run: |
         dotnet test Asisya.ProductsApi/tests/Api.IntegrationTests \
           --configuration Release \
@@ -83,11 +85,9 @@ jobs:
         path: './test-results/*.trx'
         reporter: 'dotnet-trx'
 
-    - name: 🐳 Build Docker image (no push)
-      # Se cambia el contexto de la construcción a la carpeta que contiene el Dockerfile.
+    - name: 🐳 Build Docker image
       run: |
-        docker build -t asisya-products-api:${{ github.sha }} Asisya.ProductsApi/
-        docker build -t asisya-products-api:latest Asisya.ProductsApi/
+        docker build -t asisya-products-api:latest -t asisya-products-api:${{ github.sha }} Asisya.ProductsApi/
 
     - name: ✅ Success notification
       if: success()
